Fixes Pagination Reset button text wrapping at smaller screen sizes

--- a/frontend/src/pages/Home/Table.module.css
+++ b/frontend/src/pages/Home/Table.module.css
@@ -132,6 +132,7 @@ content as if on an elevated surface*/
     font-size: 1rem;
     padding: 0.625rem;
     margin: 1rem;
+    white-space: nowrap;
 }
 
 /* Matches width to 'Reset' & 'Previous' buttons for uniform UI appearance*/
